# wos

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DEPLOYING.md  LICENSE  Makefile  OVERVIEW.md  PRINCIPLES.md  README.md  RESOLVER.md  WORKFLOW.md  marketplace.json  pyproject.toml
.briefs/: help-skill.brief.md  hook.brief.md  resolver.brief.md  skill-pair.brief.md
.claude-plugin/: marketplace.json  plugin.json
.designs/: 2026-04-19-hook-shell-structured-invocation.design.md  2026-04-20-build-check-skill-as-tool-support.design.md  2026-04-20-hook-shell-as-tool-delegation.design.md
.plans/: 2026-04-19-hook-shell-delegation.plan.md  2026-04-19-hook-shell-structured-invocation.plan.md  2026-04-20-build-check-skill-as-tool-support.plan.md  2026-04-20-hook-shell-as-tool-delegation.plan.md  2026-05-04-check-bash-script-rule-decomposition.plan.md  2026-05-04-stage-2-dispatcher-subagent.plan.md  PILOT-NOTES-check-bash-script-decomposition.md
.prompts/: synthesis-to-skill-pair.md
.resolver/: evals.yml
plugins/wiki/: CHANGELOG.md  pyproject.toml
plugins/wiki/.claude-plugin/: plugin.json
plugins/wiki/scripts/: _bootstrap.py  check_url.py  lint.py  reindex.py  update_preferences.py
plugins/wiki/skills/ingest/: SKILL.md
plugins/wiki/skills/lint/: SKILL.md
plugins/wiki/skills/lint/references/: skill-authoring-guide.md
plugins/wiki/skills/research/: SKILL.md
plugins/wiki/skills/research/references/: MANIFEST.md  citation-reverify.md  cli-commands.md  frame.md  gather-and-extract.md  research-modes.md  resumption.md  synthesize.md
plugins/wiki/skills/research/scripts/: research_assess.py
plugins/wiki/skills/setup/: SKILL.md
plugins/wiki/skills/setup/references/: capture-workflow.md  wiki-schema-template.md  working-agreements-capture.md
plugins/wiki/src/wiki/: agents_md.py  document.py  project.py  research.py  url_checker.py  wiki.py
plugins/wiki/tests/: conftest.py  test_agents_md.py  test_chain.py  test_document.py  test_frontmatter.py  test_lint.py  test_preferences.py  test_reindex.py  test_research_assess.py  test_script_syspath.py  test_suffix.py  test_update_preferences.py  test_url_checker.py  test_validators.py  test_version.py  test_wiki.py
plugins/wiki/tests/fixtures/research/: gatherer_entry.md  synthesizer_exit.md  verifier_exit.md
plugins/wiki/wiki/: __init__.py  wiki.py
(+1070 files in other folders)
