[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "toolkit"
version = "0.1.0"
description = "Dev tooling meta-package for the toolkit plugin marketplace."
requires-python = ">=3.9"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.4",
]

[tool.setuptools]
packages = []

[tool.ruff]
target-version = "py39"
line-length = 88
exclude = [
    "tools/build/skills/skill/eval-viewer/",
    "tools/build/skills/skill/scripts/",
]

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tools/wiki/tests", "tools/check/tests"]
