[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "wiki"
version = "0.3.0"
description = "Claude Code plugin for building and maintaining structured project context."
requires-python = ">=3.9"
dependencies = []

[tool.setuptools.packages.find]
where = ["src"]
include = ["wiki*"]
